# CMakeList.txt : CMake project for bitwave, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (bitwave "main.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET bitwave PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
target_precompile_headers(bitwave PRIVATE "pch.h")
target_link_libraries(bitwave PRIVATE "glfw" PRIVATE "Volk")